objects/AssignedToolsTechnicians__c.object
<CustomObject>
    <fields>
        <fullName>AcceptRejectDate__c</fullName>
        <description>Used to capture when an assignment has been accepted or rejected</description>
        <label>Accept/Reject Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Additional_comments__c</fullName>
        <description>BR-11554</description>
        <label>Additional comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChangeOrderATT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated through change order linked SFM.</description>
        <label>Change Order ATT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clocking_Start_Timestamp__c</fullName>
        <description>This field captures Clocking Start Timestamp in Offline client. not used in online or in Accept/Reject process</description>
        <label>Clocking Start Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Will be filled thanks to the SFM &quot;Complete Task&quot; by secondaries FSR. Primary technician will use the existing &quot;Complete Work Order&quot;</description>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DrivingTimeHome__c</fullName>
        <label>Driving Time After (min)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DrivingTime__c</fullName>
        <label>Driving Time Before (min)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration in hours</description>
        <formula>(EndDateTime__c -  StartDateTime__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventID__c</fullName>
        <label>Event ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSEWOId__c</fullName>
        <formula>WorkOrder__r.FSEWOId__c</formula>
        <label>Local Tracking Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_Response__c</fullName>
        <description>FSR Reponse that is recorded when the FSR rejects a work order assignment via email.  This is &quot;scrubbed&quot; from the body of the email.</description>
        <label>FSR Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSR_Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSR Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Tools_Technicians</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSR_User_Id_via_Tech_Object__c</fullName>
        <formula>CASESAFEID(IF(ISBLANK(TechnicianEquipment__r.SVMXC__Salesforce_User__c),&apos;TechnicianEquipment__r.ThirdPartyContact__c&apos;,&apos;TechnicianEquipment__r.SVMXC__Salesforce_User__c&apos;))</formula>
        <label>FSR User Id via Tech Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsOwner__c</fullName>
        <formula>TechnicianEquipment__r.SVMXC__Salesforce_User__r.Id ==  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labour_Activity__c</fullName>
        <label>Clocking Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Travel Start</fullName>
                </value>
                <value>
                    <fullName>Travel End</fullName>
                </value>
                <value>
                    <fullName>Service Start</fullName>
                </value>
                <value>
                    <fullName>Service End</fullName>
                </value>
                <value>
                    <fullName>Other Activity Start</fullName>
                    <label>Other Activitiy Start</label>
                </value>
                <value>
                    <fullName>Other Activity End</fullName>
                </value>
                <value>
                    <fullName>Client Delay End</fullName>
                    <isActive>false</isActive>
                    <label>Client Delay End</label>
                </value>
                <value>
                    <fullName>Client Delay Start</fullName>
                    <isActive>false</isActive>
                    <label>Client Delay Start</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastCancellationDate__c</fullName>
        <label>Last Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LatestNotificationDate__c</fullName>
        <inlineHelpText>Latest Notification (SMS and/or Email) sent to the technician</inlineHelpText>
        <label>Latest Notification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocalTrackingEvent__c</fullName>
        <defaultValue>&apos;WO.ACKUpd&apos;</defaultValue>
        <label>Local Tracking Event</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalTrackingStatus__c</fullName>
        <label>Local Tracking Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>To be processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Tracking_Sync_Log__c</fullName>
        <label>Local Tracking Sync Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Assigned Tools/Technicians</relationshipLabel>
        <relationshipName>AssignedToolsTechnicians</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MyTeam__c</fullName>
        <formula>AND(!ISBLANK(FSR_Salesforce_User__r.ManagerId),((FSR_Salesforce_User__r.ManagerId == $User.ManagerId) || (FSR_Salesforce_User__r.ManagerId == $User.Id)))</formula>
        <label>My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReasonforRejection__c</fullName>
        <description>Reason for Rejection for Technician. Values are from WorkOrder.REason for Rejection</description>
        <label>Reason for Rejection</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Technician Sick</fullName>
                </value>
                <value>
                    <fullName>Parts/Tools Unavailable</fullName>
                </value>
                <value>
                    <fullName>Weather Related</fullName>
                </value>
                <value>
                    <fullName>Personal Time</fullName>
                </value>
                <value>
                    <fullName>Exceeded Working Hours</fullName>
                </value>
                <value>
                    <fullName>Planner Error</fullName>
                </value>
                <value>
                    <fullName>Distance</fullName>
                </value>
                <value>
                    <fullName>Exceeded hours</fullName>
                </value>
                <value>
                    <fullName>Flexing schedule</fullName>
                </value>
                <value>
                    <fullName>Illness</fullName>
                </value>
                <value>
                    <fullName>Insufficient funds</fullName>
                </value>
                <value>
                    <fullName>Laptop unavailable</fullName>
                </value>
                <value>
                    <fullName>Not qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SESAID__c</fullName>
        <formula>TechnicianEquipment__r.SESAID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SESA ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sites_Access_Token__c</fullName>
        <description>Token used to access record in SFDC via Sites page for Accept/Reject Work Order functionality</description>
        <externalId>true</externalId>
        <label>Sites Access Token</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                    <default>true</default>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_CustomerEndDateTime__c</fullName>
        <description>Technical field to store calculated FSR work order end time in the customer&apos;s timezone.</description>
        <label>TECH_CustomerEndDateTime</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_CustomerStartDateTime__c</fullName>
        <description>Technical field to store calculated FSR work order start time in the customer&apos;s timezone.</description>
        <label>TECH_CustomerStartDateTime</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_FSREmail__c</fullName>
        <label>TECH_FSREmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TECH_FSREndDateTime__c</fullName>
        <description>Technical field to store calculated FSR work order end time in the FSR&apos;s timezone.</description>
        <label>TECH_FSREndDateTime</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_FSRNotification__c</fullName>
        <description>Notification sent to the FSR at customer confirmed</description>
        <label>TECH_FSRNotification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TECH_FSRStartDateTime__c</fullName>
        <description>Technical field to store calculated FSR work order start time in the FSR&apos;s timezone.</description>
        <label>TECH_FSRStartDateTime</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicianEquipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSR/Equipment</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Assigned Tools/Technicians</relationshipLabel>
        <relationshipName>AssignedToolsTechnicians</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WOEndDate__c</fullName>
        <formula>WorkOrder__r.maxAssignedDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WOStartDate__c</fullName>
        <formula>WorkOrder__r.minAssignedDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Assigned Work Orders</relationshipLabel>
        <relationshipName>Assigned_Tools_Technicians</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>WorkorderPrimaryFSR__c</fullName>
        <formula>CASESAFEID(WorkOrder__r.SVMXC__Group_Member__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WorkorderPrimaryFSR</label>
        <type>Text</type>
    </fields>
    <label>Assigned Tools/Technicians</label>
    <nameField>
        <displayFormat>AT-{00000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Tools/Technicians</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ATT_VR_Mar2019_LockSchedule</fullName>
        <active>true</active>
        <description>Prevent the WO reschedule when Lock Schedule = true.</description>
        <errorConditionFormula>AND( 
NOT($User.BypassVR__c), 
WorkOrder__r.LockSchedule__c=true, 
OR(
AND(ISCHANGED(Status__c),
ISPICKVAL(Status__c, &quot;Cancelled&quot;)),
ISCHANGED(StartDateTime__c),
ISCHANGED(EndDateTime__c),
ISNEW()
)
)</errorConditionFormula>
        <errorMessage>This Work Order Schedule has been locked and therefore you cannot reschedule.</errorMessage>
    </validationRules>
</CustomObject>